@@ -14,6 +14,7 @@ Version 1.0 to be released
 - Added CHtml::activeFileField (Qiang)
 - Added CFileHelper::getMimeType and CFileHelper::getMimeTypeByExtension (Qiang)
 - Added COutputCache::varyByRoute (Qiang)
+- Added 'params' to HTML options that are used in CHtml methods (Qiang)
 - Refactored UserIdentity generated by yiic webapp (Qiang)
 - Refactored CLinkPager (Qiang)
 - Refactored CFilter (Qiang)
